# IP-Backdoors

./: .gitignore  README.md  pyproject.toml  requirements-local.txt
data/: ultrachat_prompts.jsonl
data/precomputed/csvs/: TD_ci_assertive_last.csv  TD_ci_enthusiastic_last.csv  TD_ci_informal_last.csv  TD_ci_mathematical_last.csv  TD_ci_monotone_last.csv  TD_ci_paranoid_last.csv  TD_ci_poetic_last.csv
data/precomputed/rephrasings/: rephrasings_assertiveness_512.json  rephrasings_enthusiasm_512.json  rephrasings_mathematical_512.json  rephrasings_paranoia_512.json
ip_backdoors/: __init__.py  ablation.py  config.py  generation.py  judge.py  metrics.py  traits.py
notebooks/: phase_1_analysis.ipynb
results/token_ablation/: leakiness_v1.csv
results/token_ablation/responses/: brevity_enthusiasm.jsonl  informal_assertiveness.jsonl  monotone_enthusiasm.jsonl  poetic_mathematical.jsonl  sarcasm_paranoia.jsonl
results/token_ablation/scores/: brevity_enthusiasm.jsonl  informal_assertiveness.jsonl  monotone_enthusiasm.jsonl  poetic_mathematical.jsonl  sarcasm_paranoia.jsonl
scripts/: 00_smoke_check.py  01_run_token_ablation.py  02_score_responses.py
