[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-backdoors"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.4.0",
    "openai>=1.20.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ip_backdoors*"]
